--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -145,6 +145,7 @@ manipulation ,/n./@操纵;
 manufacturer ,/n./@制造者;
 masturbation ,/n./@手淫;
 mechanically ,/adv./@机械的;
+metamorphose ,/vt./@變形;,/vt./[Geology]@變質;
 metaphysical ,/adj./@形而上学的;,/adj./@超自然的;,/adj./@玄学的;,/adj./@抽象的;
 metropolitan ,/n./@大都市;
 misquotation ,/n./@误引;
