--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -801,6 +801,7 @@ liquor ,/n./@酒;
 listen ,/vi./@聽;
 litter ,/n./@垃圾;,/v./@丟@垃圾;
 little ,/adj./@小的;
+livery ,/n./@制服;,/n./@標誌性色彩;,/n./@公司標誌;
 lizard ,/n./@蜥蜴;
 loathe ,/v./@厭惡;
 locate ,/v./@定位;
@@ -1573,6 +1574,7 @@ worker ,/n./@工人;,/n./@員工;
 writer ,/n./@作者;,/n./@作家;
 yatter ,/v./@閑扯;,/v./@瞎聊;
 yellow ,/n./@黃色;,/adj./@黃色的;
+yeoman ,/n./@自耕農;,/n./@侍從;,/n./@自由民;,/n./@義勇騎兵;,/n./@海軍文書軍士;
 yogurt ,/n./@酸奶;
 zealot ,/n./@狂热分子;
 zombie ,/n./@僵屍;,/n./@行屍走肉;
