--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -246,6 +246,7 @@ clobber ,/v./@擊倒;,/v./@痛打;
 closure ,/n./@停止;
 cluster ,/n./@群;,/n./@簇;,/n./@叢;,/n./@串;
 clutter ,/n./@雜亂;
+cockade ,/n./@帽徽;,/n./@帽章;,/n./@帽上的花結;
 cockney ,/n./@倫敦東區佬;,/n./@倫敦東區土話;,/adj./@倫敦東區佬的;,/adj./@倫敦東區土話的;
 cockpit ,/n./@座艙;,/n./@駕駛艙;,/n./@駕駛座;,/n./@鬥雞場;,/n./@戰場;
 collage ,/n./@拼貼畫;
@@ -297,6 +298,7 @@ conquer ,/v./@攻擊;
 consent ,/v./@同意;
 consist ,/v./@組成;
 console ,/n./@控制臺;
+consort ,/n./@配偶;,/vi./@厮混;,/n./@僚艦;
 consult ,/v./@請教;,/v./@谘詢;
 consume ,/v./@消耗;,/v./@毀滅;
 contact ,/v./@聯係;,/v./@接触;
