--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1219,5 +1219,6 @@ workflow ,/n./@工作流程;
 wouldn't ,/v./@不会;
 wrangler ,/n./@爭論者;,/n./@牧人;
 wreckage ,/n./@残骸;
+yeomanry ,/n./@自耕農;,/n./@自由民;,/n./@義勇騎兵隊;
 yourself ,/pron./@你自己;,/pron./@你們自己;
 youthful ,/adj./@年輕的;
