--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -801,6 +801,7 @@ liquor
 listen
 litter
 little
+livery
 lizard
 loathe
 locate
@@ -1573,6 +1574,7 @@ worker
 writer
 yatter
 yellow
+yeoman
 yogurt
 zealot
 zombie
