--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -246,6 +246,7 @@ clobber
 closure
 cluster
 clutter
+cockade
 cockney
 cockpit
 collage
@@ -297,6 +298,7 @@ conquer
 consent
 consist
 console
+consort
 consult
 consume
 contact
