--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -112,6 +112,7 @@ barometer ,/n./@气压计;
 barricade ,/n./@路障;,/n./@街壘;,/vt./@堵住;
 bartender ,/n./@酒保;
 beautiful ,/adj./@美丽的;
+beefeater ,/n./@英國國王的衛兵;,/n./@倫敦塔的衛兵;
 beginning ,/n./@開始;,/n./@開端;,/n./@起點;
 behaviour ,/n./@行为;,/n./@举止;
 benchmark ,/n./@基准;,/n./@标准检查程序;
