--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -310,6 +310,7 @@ flabbiness ,/n./@軟弱;
 flintstone ,/n./@燧石;,/n./@打火石;
 forfeiture ,/n./@沒收財產;
 formidable ,/adj./@強大的;,/adj./@令人敬畏的;
+forthright ,/adj./@直率的;,/adj./@直截了當的;,/adj./@坦率的;,/adv./@直率地;,/adv./@徑直地;
 foundation ,/n./@建立;,/n./@基金会;,/n./@基础;,/n./@地基;
 fraternity ,/n./@兄弟会;,/n./@联谊会;,/n./@同行;,/n./@同僚;,/n./@同仁;,/n./@友爱;
 fraudulent ,/adj./@欺詐性的;
@@ -417,12 +418,16 @@ laboratory ,/n./@實驗室;
 leadership ,/n./@領導;
 legitimate ,/adj./@合法的;,/adj./@合理的;,/adj./@正統的;,/adj./@婚生的;
 lengendary ,/adj./@传奇般的;
+leucoderma ,/redirected./@target="vitiligo";
+leukoderma ,/redirected./@target="vitiligo";
 lieutenant ,/n./@中尉;,/n./@陆军中尉;,/n./@海军上尉;
 likelihood ,/n./@可能;,/n./@相似性;
 linguistic ,/adj./@語言的;,/adj./@語言學的;
 locomotive ,/n./@火车头;,/n./@機車;,/adj./@運動的;,/adj./@有運動能力的;
 loneliness ,/n./@寂寞;
 mackintosh ,/n./@雨衣;
+Madagascan ,/adj./@馬達加斯加的;,/n./@馬達加斯加人;,/adj./@馬達加斯加人的;
+Madagascar ,/n./@馬達加斯加;
 magistrate ,/n./@地方执法官;
 mainstream ,/n./@主流;
 malevolent ,/adj./@惡毒的;,/adj./@有惡意的;
@@ -605,6 +610,7 @@ saturation ,/n./@飽和;,/n./@浸泡;,/n./@饱和度;
 scatheless ,/adj./@无损伤的;
 scientific ,/adj./@科学的;
 scrutinise ,/v./@仔细检查;
+Scunthorpe ,/n./@斯坎索普;,/n./@斯肯索普;
 seamstress ,/n./@女裁縫;
 sedulously ,/adj./@勤勉的;
 seismology ,/n./@地震学;
