--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -40,6 +40,7 @@ calculation ,/n./@计算;
 carnivorous ,/adj./@食肉的;
 categorical ,/adj./@絕對的;,/adj./@明确的;,/adj./@斷言的;
 celebration ,/n./@庆祝;
+centrifugal ,/adj./@離心的;
 certificate ,/n./@证书;,/vt./以证书@授权;,/vt./以证书@批准;
 charismatic ,/adj./@吸引人的;,/adj./@蒙受神恩的;,/adj./@有魅力的;
 chlorophyll ,/n./@葉綠素;
