--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -143,6 +143,7 @@ legalization ,/n./@合法化;
 magnificence ,/n./@壯麗;,/n./@宏偉;
 manipulation ,/n./@操纵;
 manufacturer ,/n./@制造者;
+marksmanship ,/n./@射擊術;,/n./@槍法;
 masturbation ,/n./@手淫;
 mechanically ,/adv./@机械的;
 metamorphose ,/vt./@變形;,/vt./[Geology]@變質;
@@ -158,7 +159,7 @@ notification ,/n./@通知;
 occupational ,/adj./@职业的;
 organisation ,/n./@组织;
 organization ,/n./@组织;
-ostentatious ,/adj./@招搖的;,/adj./@誇耀的;
+ostentatious ,/adj./@招搖的;,/adj./@誇耀的;,/adj./@炫耀的;,/adj./@賣弄的;
 outmanoeuvre ,/vt./@智勝;
 overestimate ,/v./@高估;
 overwhelming ,/adj./@壓倒性的;
