--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -111,6 +111,7 @@ specification ,/n./@规格;,/n./@说明书;,/n./@详述;
 subordination ,/n./@从属;,/n./@顺从;
 superannuated ,/adj./@過時的;,/adj./@老朽的;
 supplementary ,/adj./@增补的;
+surreptitious ,/adj./@祕密的;,/adj./@偷偷摸摸的;,/adj./@鬼鬼祟祟的;
 temperamental ,/adj./@喜怒无常的;,/adj./@性情的;
 topographical ,/adj./@地形的;
 transactional ,/adj./@交易的;,/adj./@事務性的;
