--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -234,7 +234,7 @@ pad ,/n./@便箋;,/n./@墊子;
 pal ,/n./@夥伴;,/n./@朋友;
 pan ,/n./@平底鍋;
 pat ,/v./@輕拍;
-paw ,/n./@爪;
+paw ,/n./@爪;,/n./@爪子;,/v./@抓;,/v./@扒;
 pay ,/v./@支付;,/n./@工資;
 pea ,/n./@豌豆;
 pee ,/v./@撒尿;
