--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -73,6 +73,7 @@ bill ,/n./@鈔票;,/n./@法案;,/n./@廣告;
 bind ,/v./@捆綁;
 bird ,/n./@鳥;
 bite ,/v./@咬;
+blob ,/n./一@滴;,/n./一@團;
 blog ,/n./@博客;
 blow ,/v./@吹;
 blue ,/adj./@藍@色的;,/n./@藍色;
@@ -155,7 +156,7 @@ cold ,/adj./@冷的;
 coma ,/n./@昏迷;,/n./@遲鈍;,/n./@冷漠;
 comb ,/n./@梳子;
 come ,/v./@來;
-cone ,/n./@錐體;,/n./@錐形;
+cone ,/n./@錐體;,/n./@錐形;,/n./@圓錐體;,/n./@圓錐形;,/n./@圓錐形物;
 cook ,/v./@烹饪;
 cool ,/adj./@涼爽的;,/adj./@酷的;
 coon ,/n./@浣熊;
@@ -171,6 +172,7 @@ coup ,/n./@政變;
 crab ,/n./@螃蟹;
 crap ,/n./@廢物;,/n./@屎;
 crew ,/n./@隊;,/n./@組;,/n./@全體人員;
+crib ,/n./@嬰兒床;,/n./@秣槽;,/n./@木屋;
 crop ,/n./@莊稼;
 crow ,/n./@烏鴉;,/v./@啼叫;
 cuff ,/n./@袖口;,/n./@手铐;,/v./@上袖口;,/v./@戴手铐;,/v./@毆斗;,/v./@用巴掌打;
@@ -413,6 +415,7 @@ hard ,/adj./@堅硬的;,/adj./@困難的;
 hare ,/n./@野兔;
 hark ,/vi./@听;
 harm ,/v./@傷害;,/n./@傷害;,/n./@損害;,/vt./@危害;,/vt./@损害;
+harp ,/n./@豎琴;,/vi./@彈豎琴;
 hash ,/n./@混雜;
 hate ,/v./@恨;,/v./@厭;
 haul ,/v./@拖;,/vt./@运输;,/n./@大量;,/n./@大批;,/n./@旅程;
