--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -184,6 +184,7 @@ brown ,/adj./@棕色的;
 brunt ,/n./@衝擊;,/n./@撞擊;
 brush ,/n./@刷;
 brute ,/n./@畜生;,/n./@獸;,/adj./@畜生般的;,/adj./@殘忍的;
+budge ,/vi./@挪動;,/vi./@讓步;
 build ,/v./@建築;
 built ,/v./@建造@<build>;
 bulge ,/n./@腫脹;,/n./@凸塊;
@@ -556,7 +557,7 @@ growl ,/v./@咆哮;
 gruff ,/adj./@粗暴的;
 grunt ,/v./@咕噥;
 guard ,/v./@守衛;
-guess ,/v./@猜;
+guess ,/v./@猜;,/n./@猜測;
 guest ,/n./@客人;
 guide ,/v./@引導;,/v./@向导;,/n./@向导;,/n./@指南;,/v./@指导;
 guild ,/n./@行會;
@@ -825,7 +826,7 @@ peace ,/n./@和平;,/n./@安靜;,/adj./@安靜的;
 peach ,/n./@桃子;
 pearl ,/n./@珍珠;
 pedes ,/n./@足;
-peeve ,/v./@惹惱;
+peeve ,/v./@惹惱;,/n./@氣惱;
 pekoe ,/n./@白毫;
 penis ,/n./@陰莖;
 penta ,/pref./@五;
@@ -858,6 +859,7 @@ plumb ,/n./@鉛錘;,/n./@垂直;,/v./@探測;,/v./@垂直;
 plume ,/n./@羽毛;,/n./@羽飾;,/n./@羽狀物;,/n./@縷;
 plush ,/n./@長毛絨;,/n./@厚絨布;,/adj./@长毛绒的;,/adj./@豪華的;,/adj./@奢侈的;
 Pluto ,/n./@冥王星;,/n./@冥王;
+poach ,/vt./@偷獵;,/vt./@偷捕;
 point ,/v./@指出;
 poise ,/v./@平衡;,/n./@平衡;
 poker ,/n./@撲克;
@@ -915,6 +917,7 @@ ranch ,/n./@牧場;
 range ,/n./@範圍;,/n./@幅度;,/n./@排;,/n./@山脈;,/v./@平行;,/v./@延伸;,/v./@漫遊;,/v./@並列;,/v./射程@達;
 rapid ,/adj./@快速的;
 ratio ,/n./@比率;
+razor ,/n./@刮鬍刀;,/n./@剃刀;,/n./@剃鬚刀;
 reach ,/v./@到達;
 react ,/v./@反應;
 ready ,/adj./@准備好@的;
@@ -1059,7 +1062,7 @@ slink ,/v./@潛逃;,/v./@早產;
 slope ,/n./@斜坡;,/n./@山坡;,/n./@倾斜;,/vi./@倾斜;
 sloth ,/n./@懶惰;,/n./@樹懶;
 slump ,/v./@下降;,/n./@衰退;
-smack ,/n./@滋味;,/n./@少量;,/n./@掌掴;,/n./@猛然;
+smack ,/n./@滋味;,/n./@少量;,/n./@掌掴;,/n./@猛然;,/vt./@猛拍;,/vt./@摑;
 small ,/adj./@小的;
 smart ,/adj./@聰明的;,/adj./@智慧的;,/adj./@時尚的;
 smear ,/v./@誹謗;,/vt./@塗抹;,/vt./@弄髒;,/n./@汙跡;,/n./@誹謗;
@@ -1076,7 +1079,7 @@ snake ,/n./@蛇;
 snark ,/vt./@諷刺;,/vt./@嘲諷;
 sneak ,/v./@溜;,/v./@鬼鬼祟祟地做;
 sneer ,/v./@嘲笑;,/v./@冷笑;
-sniff ,/v./@嗅;
+sniff ,/v./@嗅;,/v./@聞;
 snort ,/v./@輕蔑地發出哼聲;
 snuff ,/v./@掐滅;,/v./@撲滅;
 sober ,/adj./@清醒的;
@@ -1089,7 +1092,7 @@ sorry ,/n./@抱歉;,/adj./@悲傷的;
 sound ,/n./@聲音;
 space ,/n./@空間;,/n./@太空;,/v./@分隔;,/v./@間隔;
 spade ,/n./@鏟子;,/n./@鐵鍬;,/n./@黑桃;
-spank ,/v./@拍擊;
+spank ,/v./@拍擊;,/vt./@打屁股;
 spare ,/v./@空閑;
 spark ,/n./@火星;
 spasm ,/n./@痙攣;
@@ -1304,6 +1307,7 @@ venom ,/n./@毒液;,/n./@惡意;
 verge ,/vt./@瀕臨;,/n./@邊緣;
 versa ,/adj./@反的;
 verse ,/n./@詩篇;
+vibes ,/redirected./@target="vibe";
 video ,/n./@視頻;
 vigor ,/n./@精力;
 villa ,/n./@別墅;
