--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1,3 +1,4 @@
+abalone ,/n./@鮑魚;
 abandon ,/v./@抛棄;
 abiding ,/adj./@持久的;
 ability ,/n./@能力;
@@ -10,7 +11,7 @@ academy ,/n./@學院;
 acclaim ,/v./@稱讚;
 account ,/n./@賬戶;,/v.//n./@解釋;,/v./@認爲;
 accrete ,/v./@逐漸增長;
-acerbic ,/adj./@尖酸的;
+acerbic ,/adj./@尖酸的;,/adj./@尖刻的;
 achieve ,/v./@完成;,/v./@實現;
 acquire ,/v./@習得;
 acrobat ,/n./@雜技演員;,/n./@特技演員;
@@ -473,6 +474,7 @@ emotion ,/n./@情感;
 emperor ,/n./@皇帝;
 emplace ,/v./@安放;,/v./@安置;,/v./@放列;
 empower ,/v./@授權;,/v./使@能夠;
+emulate ,/vt./@模擬;,/vt./@仿真;,/vt./@模仿;
 enclave ,/n./@飞地;
 endorse ,/v./@認可;,/v./@簽署;
 enforce ,/v./@強迫;
@@ -601,6 +603,7 @@ genital ,/adj./@生殖的;,/adj./@生殖器的;
 genteel ,/adj./@有教養的;,/adj./@文雅的;
 gentile ,/n./@異教徒;
 genuine ,/adj./@眞實的;
+geology ,/n./@地質學;
 Geordie ,/n./@喬迪;,/n./@泰恩賽德方言;,/n./@新堡方言;,/n./@紐卡索方言;
 germane ,/adj./@適用的;
 gesture ,/n./@手勢;
@@ -928,6 +931,7 @@ pattern ,/n./@模式;,/n./@圖案;
 payable ,/adj./@應付的;
 payback ,/n./@償付;,/n./@報復;
 payment ,/n./@支付;,/n./@付款;
+peacock ,/n./@雄孔雀;,/n./@孔雀;
 peasant ,/n./@農民;
 pegasus ,/n./@飛馬;,/n./@詩人的靈感;
 pendant ,/n./@吊墜;
@@ -1231,6 +1235,7 @@ stalker ,/n./@跟踪者;
 stamina ,/n./@毅力;,/n./@精力;,/n./@活力;,/n./@持久力;,/n./@耐力;
 startle ,/v./@驚愕;
 station ,/n./@車站;
+stealth ,/n./@秘密行動;,/n./@偷偷摸摸;,/n./@鬼鬼祟祟;
 stellar ,/adj./@星的;,/adj./@星球的;
 stencil ,/n./@複寫紙;,/n./@蠟紙;
 sterile ,/adj./@不育的;,/adj./@無菌的;,/adj./@貧瘠的;
