--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -235,6 +235,7 @@ confront ,/v./@面对;
 congress ,/n./@议会;
 conjunct ,/adj./@结合的;
 conjurer ,/n./@巫師;
+conjuror ,/redirected./@target="conjurer";
 conquest ,/n./@征服;
 conserve ,/v./@保护;
 consider ,/v./@考虑;
@@ -288,6 +289,7 @@ darkness ,/n./@黑暗;
 database ,/n./@数据库;
 daughter ,/n./@女儿;
 dazzling ,/adj./@令人目眩的;
+deadlock ,/n./@僵局;,/n./@僵持;
 debugger ,/n./@调试器;,/n./@调试程序;
 decadent ,/adj./@颓废的;
 December ,/n./@十二月;
@@ -658,6 +660,7 @@ lavatory ,/n./@盥洗室;,/n./@廁所;
 lavender ,/n./@薰衣草;
 legalize ,/vt./@使合法化;
 lengthen ,/v./@变长;
+leukemia ,/redirected./@target="leukaemia";
 leverage ,/n./@手段;,/n./@影响力;,/n./@杠杆作用;
 lifelong ,/adj./@终身的;,/adj./@终生的;
 ligature ,/n./@結紮線;,/n./@連字;,/n./@連音符;
@@ -691,6 +694,7 @@ manicure ,/v./@修剪;
 manifest ,/v./@表明;
 manpower ,/n./@人力;
 maritime ,/adj./@海的;,/adj./@海事的;
+marksman ,/n./@射手;,/n./@神射手;
 marriage ,/n./@婚姻;
 massacre ,/n./@屠殺;,/n./@大屠殺;
 maternal ,/adj./@母親的;,/adj./@母性的;,/adj./@母系的;
@@ -869,6 +873,7 @@ poignant ,/adj./@酸楚的;,/adj./@辛酸的;,/adj./@悲惨的;
 polarity ,/n./@極性;
 polaroid ,/n./@偏光板;,/n./@偏振片;
 politics ,/n./@政治;
+polyglot ,/n./@精通數種語言的人;,/adj./@用數種語言的;
 polymath ,/adj./@博學的;,/n./@博學家;
 populace ,/n./@民众;,/n./@大众;
 portable ,/adj./@可携带的;
@@ -1198,6 +1203,7 @@ vigorous ,/adj./@精力充沛的;
 violence ,/n./@暴力;
 visceral ,/adj./@內臟的;
 visional ,/adj./@虚幻的;,/adj./@视力的;
+vitiligo ,/n./@白癜風;,/n./@白斑病;
 vocalise ,/redirected./@target="vocalize";
 vocalize ,/vt./@發音;,/vt./@元音化;
 vocation ,/n./@职业;
