--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -454,9 +454,10 @@ galvanize ,/v./@刺激;
 garrulous ,/adj./@嘮叨的;,/adj./@喋喋不休的;
 generally ,/adj./@通常的;,/adj./@一般的;
 gentleman ,/n./@绅士;
-geography ,/n./@地理學;,/n./@地形;
+geography ,/n./@地理學;,/n./@地形;,/n./@地勢;
 geometric ,/adj./@幾何的;,/adj./@幾何學的;,/adj./@幾何圖案的;,/adj./@幾何級數的;,/adj./@幾何級的;
 gibberish ,/n./@胡言亂語;
+ginormous ,/redirected./@target="enormous";
 gladiator ,/n./@格鬥者;,/n./@角斗士;
 gratitude ,/n./@感激;,/n./@感谢;
 grievance ,/n./@不滿;,/n./@不平;,/n./@委屈;,/n./@冤情;
@@ -581,6 +582,7 @@ landscape ,/n./@风景;,/n./@风景画;,/n./@地形;
 Laurentia ,/n./@勞倫大陸;
 lawnmower ,/n./@割草機;
 legendary ,/adj./@傳說的;,/adj./@傳奇的;
+leukaemia ,/n./@白血病;
 liability ,/n./@責任;
 lifestyle ,/n./@生活方式;
 lightning ,/n./@閃電;
@@ -745,7 +747,7 @@ practical ,/adj./@實際的;
 pragmatic ,/adj./@實際的;,/adj./@實用主義的;,/adj./@務實的;,/adj./@實幹的;
 precedent ,/adj./@前面的;,/n./@先例;
 preceding ,/adj./@在前的;
-precipice ,/n./@悬崖;,/n./@险境;
+precipice ,/n./@悬崖;,/n./@险境;,/n./@斷崖;,/n./@絕壁;
 precision ,/n./@精确;
 precursor ,/n./@前驅;,/n./@前身;,/n./@前兆;,/n./@前體;,/n./@先兆;
 predation ,/n./@掠食;,/n./@掠奪;
