--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -310,6 +310,7 @@ flabbiness
 flintstone
 forfeiture
 formidable
+forthright
 foundation
 fraternity
 fraudulent
@@ -417,12 +418,16 @@ laboratory
 leadership
 legitimate
 lengendary
+leucoderma
+leukoderma
 lieutenant
 likelihood
 linguistic
 locomotive
 loneliness
 mackintosh
+Madagascan
+Madagascar
 magistrate
 mainstream
 malevolent
@@ -605,6 +610,7 @@ saturation
 scatheless
 scientific
 scrutinise
+Scunthorpe
 seamstress
 sedulously
 seismology
