--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -73,6 +73,7 @@ bill
 bind
 bird
 bite
+blob
 blog
 blow
 blue
@@ -171,6 +172,7 @@ coup
 crab
 crap
 crew
+crib
 crop
 crow
 cuff
@@ -413,6 +415,7 @@ hard
 hare
 hark
 harm
+harp
 hash
 hate
 haul
