--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -184,6 +184,7 @@ brown
 brunt
 brush
 brute
+budge
 build
 built
 bulge
@@ -858,6 +859,7 @@ plumb
 plume
 plush
 Pluto
+poach
 point
 poise
 poker
@@ -915,6 +917,7 @@ ranch
 range
 rapid
 ratio
+razor
 reach
 react
 ready
@@ -1304,6 +1307,7 @@ venom
 verge
 versa
 verse
+vibes
 video
 vigor
 villa
