--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -569,6 +569,7 @@ flight
 flinch
 flower
 fluent
+fluffy
 foetal
 folder
 follow
@@ -822,6 +823,7 @@ malign
 mallow
 mammal
 manage
+manger
 mangle
 manner
 mantle
@@ -963,6 +965,7 @@ outlaw
 outlet
 outset
 overdo
+oyster
 pablum
 pacify
 packet
