--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -1,3 +1,4 @@
+abalone
 abandon
 abiding
 ability
@@ -473,6 +474,7 @@ emotion
 emperor
 emplace
 empower
+emulate
 enclave
 endorse
 enforce
@@ -601,6 +603,7 @@ genital
 genteel
 gentile
 genuine
+geology
 Geordie
 germane
 gesture
@@ -928,6 +931,7 @@ pattern
 payable
 payback
 payment
+peacock
 peasant
 pegasus
 pendant
@@ -1231,6 +1235,7 @@ stalker
 stamina
 startle
 station
+stealth
 stellar
 stencil
 sterile
