--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -235,6 +235,7 @@ confront
 congress
 conjunct
 conjurer
+conjuror
 conquest
 conserve
 consider
@@ -288,6 +289,7 @@ darkness
 database
 daughter
 dazzling
+deadlock
 debugger
 decadent
 December
@@ -658,6 +660,7 @@ lavatory
 lavender
 legalize
 lengthen
+leukemia
 leverage
 lifelong
 ligature
@@ -691,6 +694,7 @@ manicure
 manifest
 manpower
 maritime
+marksman
 marriage
 massacre
 maternal
@@ -869,6 +873,7 @@ poignant
 polarity
 polaroid
 politics
+polyglot
 polymath
 populace
 portable
@@ -1198,6 +1203,7 @@ vigorous
 violence
 visceral
 visional
+vitiligo
 vocalise
 vocalize
 vocation
