--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -457,6 +457,7 @@ gentleman
 geography
 geometric
 gibberish
+ginormous
 gladiator
 gratitude
 grievance
@@ -581,6 +582,7 @@ landscape
 Laurentia
 lawnmower
 legendary
+leukaemia
 liability
 lifestyle
 lightning
