--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -569,6 +569,7 @@ flight ,/n./@航班;,/n./@飛;,/n./@逃走;
 flinch ,/v./@畏縮;
 flower ,/n./@花;
 fluent ,/adj./@流暢的;
+fluffy ,/adj./@毛茸茸的;,/adj./@蓬鬆的;,/adj./@絨毛般的;,/adj./@鬆軟的;
 foetal ,/adj./@胎兒的;
 folder ,/n./@文件夾;
 follow ,/v./@跟隨;,/v./@按照;
@@ -822,6 +823,7 @@ malign ,/v./@誹謗;,/v./@污衊;,/v./@中傷;
 mallow ,/n./@錦葵;
 mammal ,/n./@哺乳動物;
 manage ,/v./@處理;,/v./@管理;,/v./@控制;
+manger ,/n./@食槽;,/n./@秣槽;
 mangle ,/vt./@損毀;,/vt./@毀壞;,/vt./@壓碎;,/vt./@撕毀;
 manner ,/n./@方式;,/n./@習慣;
 mantle ,/v./@覆蓋;,/n./@斗篷;
@@ -963,6 +965,7 @@ outlaw ,/n./@亡命之徒;,/vt./@禁止;,/vt./@放逐;
 outlet ,/n./@出口;,/n./@出水口;,/n./@排氣口;,/n./@出路;,/n./@銷路;
 outset ,/n./@開始;
 overdo ,/v./@過火;,/v./@誇張;
+oyster ,/n./@牡蠣;,/n./@蠔;
 pablum ,/n./@嬰兒麥片;
 pacify ,/vt./@使平靜;
 packet ,/n./@小包;,/n./@小盒;
