--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -584,7 +584,7 @@ lynx ,/n./@山貓;,/n./@猞猁;
 mace ,/n./@狼牙棒;,/n./@權杖;
 made ,/v./<make的過去式>@制造;
 maid ,/n./@侍女;
-mail ,/n./@郵件;
+mail ,/n./@郵件;,/n./@鎖子甲;,/vt./@郵寄;
 maim ,/v./@使殘廢;
 main ,/adj./@主要的;
 make ,/v./@制作;
@@ -1142,3 +1142,4 @@ zero ,/n./@零;
 zest ,/n./@興趣;,/n./@熱心;,/n./@風味;
 zinc ,/n./@鋅;
 zoom ,/v./@變焦;,/v./@移動;,/v./@急速上升;
+Zulu ,/n./@祖魯人;,/n./@祖魯語;
