--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -106,6 +106,7 @@ bacon ,/n./@鹹肉;,/n./@熏肉;
 badge ,/n./@徽章;,/n./@標記;
 bagel ,/n./@硬面包圈;
 baker ,/n./@麵包師;
+Bantu ,/n./@班圖人;,/n./@班圖語;
 baron ,/n./@男爵;,/n./@領主;
 basic ,/adj./@基礎的;,/adj./@基本的;
 basin ,/n./@盆;,/n./@盆地;
@@ -1323,6 +1324,7 @@ voter ,/n./@投票人;,/n./@選舉人;
 vouch ,/vt./@担保;,/vt./@保证;,/vt./@证明;
 vowel ,/n./@元音;,/n./@元音字母;
 wagon ,/n./@貨車;
+waive ,/vt./@放棄;,/vt./@撤回;,/vt./@擱置;
 wanna ,/v./@想要;
 waste ,/v./@浪費;
 watch ,/v./@觀看;,/v./@觀察;,/n./@手表;
@@ -1372,6 +1374,7 @@ wring ,/v./@擰;,/v./@絞;
 wrist ,/n./@手腕;
 write ,/v./@寫;
 wrong ,/adj./@錯誤的;,/adv./@錯誤地;,/v./@冤枉;,/v./@誹謗;
+Xhosa ,/n./@科薩人;,/n./@科薩語;
 yacht ,/n./@快艇;,/n./@遊船;
 yearn ,/v./@渴望;,/v./@向往;,/v./@思念;
 yield ,/vt./@屈服;,/v./@出產;,/v./@放棄;,/n./@產量;,/n./@收益;
