--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -354,6 +354,7 @@ curtsy ,/n./@屈膝禮;,/vi./@行屈膝禮;
 cussed ,/adj./@固執的;
 custom ,/n./@風俗;,/n./@習慣;
 cypher ,/n./@零;
+Dacian ,/n./@達契亞人;,/adj./@達契亞的;
 daemon ,/n./@魔鬼;,/n./@惡魔;
 damage ,/v./@破壞;,/v./@損害;,/n./@損害;,/n./@損傷;,/n./@傷害;,/n./@損毀;
 danger ,/n./@危險;
@@ -922,6 +923,7 @@ nickel ,/n./@鎳幣;
 nimble ,/adj./@敏捷的;
 nipple ,/n./@乳頭;
 nobody ,/pron./@沒有人;
+Nordic ,/adj./@北歐人的;,/adj./@斯堪的納維亞人的;,/adj./@斯堪的納維亞的;,/n./@北歐人;,/n./@斯堪的納維亞人;
 normal ,/adj./@正常的;
 notary ,/n./@公證人;
 notice ,/v./@註意;,/n./@註意;,/n./@通知;
