--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -641,6 +641,7 @@ harness ,/v./@治理;,/v./@利用;,/n./@馬具;
 harvest ,/v.//n./@收割;,/v.//n./@收獲;
 hashtag ,/n./@標簽;
 hastily ,/adv./@匆忙地;,/adv./@倉促地;,/adv./@草率地;
+hauberk ,/n./@锁子甲;
 hauteur ,/n./@傲慢;
 healthy ,/adj./@健康的;
 hearken ,/v./@傾聽;
@@ -1125,7 +1126,8 @@ rivulet ,/n./@小溪;
 roaming ,/v./@漫步;
 robbery ,/n./@搶劫;
 Rodinia ,/n./@羅迪尼亞大陸;
-romance ,/n./@浪漫;
+romance ,/n./@浪漫;,/n./@浪漫氣氛;,/n./@風流韻事;
+Romance ,/n./@羅曼語;,/n./@拉丁系語言;,/adj./@羅曼語的;,/adj./@拉丁系語言的;
 routine ,/n./@常规;,/n./@例行程序;,/adj./@例行的;,/adj./@常规的;,/adj./@平淡的;,/adj./@乏味的;
 royalty ,/n./@王室;,/n./@版稅;,/n./@王權;,/n./@專利稅;
 rubbish ,/n./@垃圾;
@@ -1338,7 +1340,7 @@ treason ,/n./@叛国罪;,/n./@叛国;
 trekker ,/n./@徒步旅行者;
 tremble ,/v./@顫抖;
 tribune ,/n./@保民官;
-tribute ,/n./@頌詞;,/n./@獻禮;,/n./@贡品;
+tribute ,/n./@頌詞;,/n./@獻禮;,/n./@贡品;,/n./@貢物;
 trickle ,/v./@滴下;
 trigger ,/n./@扳機;,/vt./@觸發;,/vt./@引發;,/n./@誘因;,/n./@触发器;,/vt./@引起;
 trilogy ,/n./@三部曲;,/n./@三部劇;,/n./@三聯劇;
