--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -193,6 +193,7 @@ chemical ,/adj./@化学的;,/n./@化学药品;,/n./@化学制品;
 chestnut ,/n./@栗子;,/n./@栗樹;
 childish ,/adj./@幼稚的;
 children ,/n./@孩子@们;
+chivalry ,/n./@騎士精神;,/n./@騎士風度;,/n./@騎士制度;
 cinnamon ,/n./@桂皮;,/n./@肉桂树;,/n./@浅黄褐色;
 circular ,/adj./@循环的;
 citation ,/n./@引用;
