--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -864,6 +864,7 @@ secondary ,/adj./@次要的;,/adj./@第二的;
 sedentary ,/adj./@久坐的;,/adj./@坐慣的;,/adj./@定栖的;,/adj./@靜坐的;
 seduction ,/v./@诱惑;
 seductive ,/adj./@吸引人的;
+segmental ,/adj./@分節的;,/adj./[Architecture]@弧形的;
 segregate ,/v./@隔離;,/v./@分離;
 selection ,/n./@挑选;,/n./@選擇;,/n./@選集;
 semblance ,/n./@外貌;,/n./@假裝;
