--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -106,6 +106,7 @@ bacon
 badge
 bagel
 baker
+Bantu
 baron
 basic
 basin
@@ -1323,6 +1324,7 @@ voter
 vouch
 vowel
 wagon
+waive
 wanna
 waste
 watch
@@ -1372,6 +1374,7 @@ wring
 wrist
 write
 wrong
+Xhosa
 yacht
 yearn
 yield
