--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -354,6 +354,7 @@ curtsy
 cussed
 custom
 cypher
+Dacian
 daemon
 damage
 danger
@@ -922,6 +923,7 @@ nickel
 nimble
 nipple
 nobody
+Nordic
 normal
 notary
 notice
