--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -641,6 +641,7 @@ harness
 harvest
 hashtag
 hastily
+hauberk
 hauteur
 healthy
 hearken
@@ -1126,6 +1127,7 @@ roaming
 robbery
 Rodinia
 romance
+Romance
 routine
 royalty
 rubbish
