--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -10,6 +10,7 @@ craniocerebral ,/adj./@顱腦的;
 disappointedly ,/adv./@失望的;
 discrimination ,/n./@歧視;,/n./@辨別;,/n./@區別;
 dysproteinosis ,/n./@蛋白質缺乏症;
+ecclesiastical ,/adj./@教會的;,/adj./@教士的;
 gentrification ,/n./@中产阶级化;
 identification ,/n./@鉴定;
 implementation ,/n./@实现;,/n./@实行;,/n./@执行;
