--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -121,6 +121,7 @@ chromosome ,/n./@染色体;
 chronology ,/n./@年表;,/n./@年代顺序;,/n./@年代學;
 circumcise ,/v./@割除包皮;,/v./@割除陰蒂;
 circumvent ,/v./@包圍;,/v./@繞行;,/vt./@規避;,/vt./@以智取勝;
+clementine ,/n./@小柑橘;
 clumsiness ,/n./@笨拙;
 collarbone ,/n./@鎖骨;
 collateral ,/adj./@附带的;,/adj./@有担保的;,/n./@抵押的;,/n./@抵押物;
@@ -276,7 +277,9 @@ equivocate ,/v./@模棱兩可;,/v./@支吾其詞;,/v./@含糊其辭;
 escalation ,/n./@增强;,/n./@加剧;,/n./@扩大;,/n./@恶化;,/n./@逐步上升;,/n./@逐步擴大;
 especially ,/adv./@尤其;
 evaluation ,/n./@评价;,/n./@评估;
+evangelism ,/n./@福音傳道;
 evangelist ,/n./@福音傳道者;
+Evangelist ,/n./@福音書作者;
 eventually ,/adv./@最终;,/adv./@终于;
 everything ,/pron./@所有事物;
 everywhere ,/adv./@到處;,/adv./@處處;
@@ -377,6 +380,7 @@ inequality ,/n./@不平等;
 inevitable ,/adj./@必然的;,/adj./@不可避免的;
 infarction ,/n./@梗塞;
 infiltrate ,/v./@渗入;,/v./@潜入;,/vt./@滲透;
+infinitive ,/n./@動詞不定式;,/adj./@動詞不定式的;
 ingredient ,/n./@成分;
 inhabitant ,/n./@居民;
 inhibition ,/n./@抑制;
@@ -471,6 +475,7 @@ narcissist ,/n./@自我陶醉者;,/n./@孤芳自赏者;,/n./@自戀者;
 navigation ,/n./@航行;,/n./@航海;
 neutralize ,/v./@中和;,/v./@抵消;
 nomination ,/n./@提名;,/n./@任命;
+nominative ,/n./@主格;,/adj./@主格的;
 nonchalant ,/adj./@冷淡的;,/adj./@不關心的;
 obligation ,/n./@义务;
 obligatory ,/adj./@義務的;
@@ -616,6 +621,7 @@ sedulously ,/adj./@勤勉的;
 seismology ,/n./@地震学;
 separately ,/adj./@分别的;,/adj./@分离的;
 separation ,/n./@分離;,/n./@間隔;,/n./@分開;
+Septuagint ,/n./@七十士譯本聖經;
 settlement ,/n./@解决;,/n./@定居地;
 shopkeeper ,/n./@店主;
 similarity ,/n./@類似;
