--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -304,6 +304,7 @@ pessimistic ,/adj./@悲观的;
 planetarium ,/n./@天文館;,/n./@天文臺;
 poltergeist ,/n./@搗蛋鬼;
 pomegranate ,/n./@石榴;,/n./@石榴树;
+pontificate ,/n./@教宗職權;,/n./@教宗任期;
 possibility ,/n./@可能性;
 postulation ,/n./@假定;,/n./@假設;
 precipitate ,/v./@促成;
