--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -10,6 +10,8 @@ adventitious ,/adj./@外來的;,/adj./@後天的;
 agricultural ,/adj./@农业的;
 alphabetical ,/adj./@字母的;,/adj./@字母表的;,/adj./@按字母順序的;
 ambidextrous ,/adj./@两手都善用的;
+amphitheater ,/redirected./@target="amphitheatre";
+amphitheatre ,/n./@圓形劇場;,/n./@競技場;
 annihilation ,/n./@殲滅;
 announcement ,/n./@宣布;
 antediluvian ,/adj./@古老的;
@@ -92,6 +94,7 @@ enthusiastic ,/adj./@热情的;
 entreprenant ,/adj./@大胆的;,/adj./@有上进心的;
 entrepreneur ,/n./@创业者;
 estrangement ,/n./@疏離;,/n./@疏遠;,/n./@隔閡;
+evangelistic ,/adj./@傳福音的;,/adj./@福音傳播者的;
 exaggeration ,/n./@夸大;,/n./@夸张;
 exasperation ,/n./@憤怒;,/n./@惡化;
 excruciating ,/adj./@難以忍受的;,/adj./@極痛苦的;
