--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -1,6 +1,7 @@
 accommodation ,/n./@膳宿;,/n./@调节;
 accquaintance ,/n./@相识;,/n./@熟人;
 administrator ,/n./@管理者;
+amphitheatric ,/adj./@圓形劇場的;
 appropriately ,/adj./@适当的;
 approximately ,/adv./@大约;
 archaeologist ,/n./@考古學家;
