--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -32,6 +32,7 @@ representative ,/n./@代表;
 representitive ,/n./@代表;
 responsibility ,/n./@责任;
 sensationalism ,/n./@追求轟動效應;,/n./@官能主義;,/n./@追求轟動效應的題材;,/n./@嘩眾取寵;
+septuagenarian ,/n./@七十多歲的人;,/adj./@七十多歲的;,/adj./@七十多歲的人的;
 simultaneously ,/adv./@同时地;
 supercontinent ,/n./@超級大陸;,/n./@超大陸;
 sustainability ,/n./@可持續性;,/n./@永續性;
