--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -697,7 +697,7 @@ oppo ,/adj./@對應的;
 opus ,/n./@作品;
 oral ,/adj./@口頭的;,/adj./@口述的;
 orgy ,/n./@狂歡;
-oval ,/adj./@橢圓形的;
+oval ,/adj./@橢圓形的;,/adj./@卵形的;
 oven ,/n./@爐;,/n./@竈;,/n./@烤爐;,/n./@烤箱;
 over ,/v./@結束;,/v./@越過;,/prep./在...@之上;
 pace ,/vi./@踱步;
