--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -90,6 +90,7 @@ atone ,/v./@贖回;
 attic ,/n./@閣樓;
 audio ,/n./@音頻;
 augur ,/v./@预示;,/v./@占卜;,/v./@预言;,/n./@预兆;,/n./@占卜官;,/n./@预言者;
+aurum ,/n./@金;
 auxil ,/n./@助動詞;
 avail ,/v./ @有用;,/v./@有利;
 avast ,/v./@停住;
@@ -603,6 +604,7 @@ hover ,/v./@盤旋;,/v./@翺翔;,/v./@徘徊;
 human ,/n./@人類;,/adj./@人類的;
 humid ,/adj./@湿的;,/adj./@潮濕的;
 humor ,/redirected./@target="humour";
+humus ,/n./@腐殖質;
 hunch ,/n./@預感;,/n./@直覺;,/vi./@弓身;,/vt./@隆起;
 hunky ,/adj./@结实性感的;
 hurry ,/n./@匆忙;,/v./@趕緊;
@@ -876,7 +878,7 @@ prick ,/v./@刺;,/v./@竪起;,/n./@陰莖;
 pride ,/n./@驕傲;
 prime ,/adj./@首要的;,/adj./@第一的;
 print ,/v./@打印;
-prior ,/adv./@優先的;,/adv./@在前;
+prior ,/adv./@優先的;,/adv./@在前;,/n./@修道院院長;,/n./@大修道院副院長;
 prism ,/n./@棱鏡;,/n./@棱柱;
 probe ,/v./@探測;,/n./@探針;,/vt./@刺探;
 prone ,/adj./@俯伏的;
