--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -799,7 +799,7 @@ linear ,/adj./@線性的;,/adj./@線狀的;
 linger ,/v./@徘徊;,/v./@逗留;,/v./@拖延;,/vi./@留存;
 lining ,/n./@夾裡;,/n./@襯裡;
 liquid ,/adj./@液態的;
-liquor ,/n./@酒;
+liquor ,/n./@酒;,/n./@汁;
 listen ,/vi./@聽;
 litter ,/n./@垃圾;,/v./@丟@垃圾;
 little ,/adj./@小的;
@@ -1116,6 +1116,7 @@ recipe ,/n./@食譜;,/n./@配方;,/n./@秘訣;
 recite ,/v./@背誦;,/v./@朗誦;,/v./@講述;
 recoil ,/v./@畏縮;,/v./@反沖;,/v./@後坐;,/vi./@反彈;
 record ,/n.//v./@記錄;,/v./@録制;
+rectum ,/n./@直腸;
 redact ,/vt./@編輯;,/vt./@校訂;,/vt./@編寫;,/vt./@刪減;,/vt./@修訂;
 redeem ,/vt./@兌換;,/v./@贖回;,/v./@挽回;,/v./@履行;,/v./@補償;,/v./@恢復;
 reduce ,/v./@減少;
@@ -1273,6 +1274,7 @@ shrink ,/v./@收縮;,/v./@畏縮;,/n./@心理醫生;
 shroom ,/n./@蘑菇;
 shroud ,/v./@覆蓋;,/v./@遮蔽;,/n./@覆蓋物;,/n./@壽衣;,/n./@裹尸布;
 signal ,/n./@信號;
+signet ,/n./@圖章;,/n./@印章;
 signor ,/n./@先生;
 silage ,/n./@青貯飼料;
 silent ,/adj./@寂靜的;
@@ -1287,6 +1289,7 @@ sizzle ,/vi./@發嘶嘶聲;,/n./@嘶嘶聲;
 sketch ,/n./@速寫;,/n./@素描;,/n./@草圖;
 skewed ,/adj./@歪的;
 skinny ,/adj./@機密的;
+Slavic ,/redirected./@target="Slavonic";
 sledge ,/n./@雪橇;,/n./@大錘;
 sleepy ,/adj./@欲睡的;,/adj./@困乏的;
 sleeve ,/n./@袖子;
