--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -100,6 +100,7 @@ attempt ,/v./@企圖;,/v./@嘗試;,/n./@企圖;,/n./@嘗試;
 attract ,/v./@吸引;
 auction ,/n./@拍賣;
 augment ,/v./@增大;
+aureate ,/adj./@金色的;,/adj./@鍍金的;,/adj./@燦爛的;
 auspice ,/n./@贊助;,/n./@主辦;,/n./@吉兆;,/n./@預兆;
 austere ,/adj./@嚴峻的;
 autopsy ,/n./@驗屍;
@@ -210,6 +211,7 @@ carrier ,/n./@載體;,/n./@航空母艦;
 cartoon ,/n./@卡通;,/n./@動漫;
 cascade ,/n./@瀑布;,/v./@傾瀉;,/n./@層疊;
 cashier ,/n./@出納;
+Catalan ,/adj./@加泰羅尼亞的;,/n./@加泰羅尼亞人;,/n./@加泰羅尼亞語;,/adj./@加泰羅尼亞人的;,/adj./@加泰羅尼亞語的;
 catchup ,/n./@番茄醬;
 caution ,/n./@警告;,/n./@註意;
 ceiling ,/n./@天花板;
@@ -250,6 +252,7 @@ clutter ,/n./@雜亂;
 cockade ,/n./@帽徽;,/n./@帽章;,/n./@帽上的花結;
 cockney ,/n./@倫敦東區佬;,/n./@倫敦東區土話;,/adj./@倫敦東區佬的;,/adj./@倫敦東區土話的;
 cockpit ,/n./@座艙;,/n./@駕駛艙;,/n./@駕駛座;,/n./@鬥雞場;,/n./@戰場;
+cognate ,/adj./@同源的;,/adj./@同根的;,/adj./@同系的;,/n./@同源詞;,/n./@同根詞;
 collage ,/n./@拼貼畫;
 collate ,/v./@整理;,/v./@核對;,/v./@校對;
 collect ,/v./@收集;
@@ -399,6 +402,7 @@ destiny ,/n./@命運;,/n./@天意;,/n./@定數;
 destroy ,/v./@摧毀;
 develop ,/v./@发展;
 deviate ,/vi./@偏离;,/vi./@背离;,/vi./@脫離;,/vt./@使脫軌;
+dextral ,/adj./@右側的;,/adj./@用右手的;,/adj./@右旋的;
 diagram ,/n./@圖表;
 dialect ,/n./@方言;
 dialogo ,/n./@對話;
@@ -487,6 +491,7 @@ entwine ,/vt./@纏繞;,/vt./@糾纏;,/vt./@交錯;
 envelop ,/v./@包圍;,/v./@包裹;,/v./@圍繞;,/n./@信封;
 envious ,/adj./@嫉妒的;
 environ ,/v./@環繞;,/v./@包圍;
+eparchy ,/n./@主教管區;
 epicure ,/n./@美食家;,/n./@老饕;,/n./@享樂主義者;,/adj./@美食的;
 epigram ,/n./@警句;
 episode ,/n./@集;,/n./@插曲;,/n./@情節;
@@ -499,6 +504,7 @@ esquire ,/n./@君子;
 eternal ,/adj./@永恆的;
 eudemon ,/n./@守護神;,/n./@善良的精靈;
 Eurasia ,/n./@歐亞大陸;,/n./@歐羅細亞;
+evangel ,/n./@福音;
 evasion ,/v./@逃避;
 evasive ,/adj./@逃避的;,/adj./@推托的;
 evident ,/adj./@證據確鑿的;
