--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -124,6 +124,7 @@ bandange ,/n./@绷带;
 banister ,/n./@欄杆的支柱;
 baseball ,/n./@棒球;
 basement ,/n./@地下室;
+basilica ,/n./@長方形會堂;,/n./@長方形建築;,/n./@長方形教堂;
 bathroom ,/n./@浴室;
 bedazzle ,/v./@吸引;
 behavior ,/n./@行为;
@@ -208,10 +209,12 @@ coherent ,/adj./@連貫的;,/adj./@粘著的;
 cohesion ,/n./@凝聚;,/n./@结合;
 cohesive ,/adj./@有粘性的;
 coincide ,/v./@一致;,/n./@巧合;,/n./@同時發生;
+coliseum ,/n./@競技場;,/n./@大劇場;
 collapse ,/v./@坍塌;
 colonial ,/adj./@殖民的;,/adj./@殖民地的;
 colorful ,/adj./@多彩的;
 colossal ,/adj./@庞大的;,/adj./@巨大的;
+colossus ,/n./@巨像;
 Columbia ,/n./@哥伦比亚;
 comedian ,/n./@喜劇演員;,/n./@滑稽演員;
 commence ,/n./@开始;
@@ -332,6 +335,7 @@ dilation ,/n./@擴張;,/n./@擴大;
 diligent ,/adj./@努力的;
 diminish ,/v./@减少;,/v./@縮小;
 dinosaur ,/n./@恐龙;
+diocesan ,/adj./@教區的;
 director ,/n./@导演;
 disabled ,/adj./@残疾的;,/adj./@丧失能力的;
 disagree ,/v./@不同意;
@@ -442,6 +446,7 @@ evidence ,/n./@证据;
 excavate ,/v./@发掘;
 exchange ,/v./@交换;
 exciting ,/adj./@令人兴奋的@<excite的正在进行时>;
+exemplar ,/n./@模範;,/n./@範例;,/n./@典型;
 exercise ,/n./@鍛煉;,/n./@練習;
 exertion ,/n./@发挥;,/n./@运用;,/n./@费力;,/n./@尽力;
 existent ,/adj./@存在的;
@@ -467,6 +472,7 @@ favorite ,/adj./@最爱的;
 feasible ,/adj./@可行的;
 February ,/n./@二月;
 feedback ,/n./@反饋;
+feminine ,/adj./@女性的;,/adj./@陰性的;,/adj./@婦女的;
 ferocity ,/n./@兇猛;,/n./@殘暴;
 festival ,/n./@节日;
 fidelity ,/n./@忠誠;
@@ -506,6 +512,7 @@ fumigate ,/vt./@煙燻;,/vt./@燻蒸;
 function ,/n./@作用;,/n./@功能;,/n./@函數;,/v./@运行;
 fuselage ,/n./@機身;
 futility ,/n./@無用;,/n./@徒勞;,/n./@無效;,/n./@無益;
+Galician ,/n./@加利西亞語;,/adj./@加利西亞的;,/n./@加利西亞人;,/adj./@加利西亞人的;,/adj./@加利西亞語的;
 garrison ,/n./@要塞;,/v./@駐防;,/v./@守衛;,/n./@卫戍部队;
 gauntlet ,/n./@长手套;,/n./@金属护手;
 generate ,/v./@产生;,/v./@發生;,/v./@生成;,/v./@生殖;
@@ -898,6 +905,7 @@ pressing ,/adj./@急迫的;
 pressure ,/n./@压力;
 prestige ,/n./@威望;,/n./@聲望;,/n./@名望;
 previous ,/adj./@之前的;
+prioress ,/n./@修女院院長;,/n./@大修女院副院長;
 priority ,/n./@优先;
 pristine ,/adj./@原始的;,/adj./@古時的;,/adj./@淳樸的;
 probable ,/adj./@可能的;
@@ -1038,6 +1046,7 @@ skeletal ,/adj./@骨骼的;,/adj./@骸骨的;,/adj./@梗概的;,/adj./@大概的
 skeleton ,/n./@骨架;,/n./@骨骼;,/n./@綱要;
 skillful ,/adj./@娴熟的;
 skirmish ,/n./@小衝突;
+Slavonic ,/adj./@斯拉夫民族的;,/adj./@斯拉夫人的;,/adj./@斯拉夫語的;,/n./@斯拉夫人;,/n./@斯拉夫語;
 sluggish ,/adj./@遲鈍的;,/adj./@遲緩的;,/adj./@懶惰的;
 smoulder ,/vi./@陰燃;,/vi./@悶燃;
 sobriety ,/n./@清醒;,/n./@冷靜;,/n./@節制;,/n./@嚴肅;
