--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -145,6 +145,7 @@ caliphate ,/n./@伊斯蘭王權;,/n./@阿拉伯帝國;
 candidacy ,/n./@候選資格;,/n./@候選狀態;,/n./@候補資格;
 canonical ,/adj./@權威的;,/adj./@規範的;,/adj./@標準的;,/adj./@典型的;
 capillary ,/n./@毛细管;
+capitulum ,/n./@章節;,/n./@篇;
 Capricorn ,/n./@摩羯座;,/n./@摩羯宮;,/n./@南回歸線;
 captivate ,/v./@迷住;
 careerist ,/n./@野心家;,/n./@事业狂;
@@ -154,6 +155,7 @@ carpentry ,/n./@木匠活;
 cartilage ,/n./@軟骨;
 cascading ,/n./@級聯;,/n./@串接;,/n./@階式滲透;
 catalogue ,/n./@目錄;
+Catalonia ,/n./@加泰羅尼亞;
 catamaran ,/n./@雙體船;
 catatonic ,/adj./@緊張性精神癥的;
 celebrate ,/v./@庆祝;
@@ -184,11 +186,12 @@ clockwise ,/adj./@順時針的;,/adv./@順時針;
 coagulate ,/v./@凝結;
 coalition ,/n./@同盟;
 cognition ,/n./@認識;,/n./@認知;
-cognitive ,/adj./@认知的;,/adj./@认知能力的;,/adj./@认知过程的;
+cognitive ,/adj./@认知的;,/adj./@认知能力的;,/adj./@认知过程的;,/adj./@認識的;
 collation ,/n./@整理;,/n./@校對;
 colleague ,/n./@同事;
 collision ,/v./@冲突;,/v./@抵触;,/v./@碰撞;
 collocate ,/n./@布置;
+Colosseum ,/n./@羅馬圓形大競技場;
 commingle ,/v./@充分混合;
 commissar ,/n./@政治委员;,/n./@人民委员;
 committee ,/n./@委員會;
@@ -274,6 +277,7 @@ demanding ,/adj./@要求严苛的;
 demeanour ,/n./@舉止;,/n./@風度;,/n./@舉動;,/n./@行為;
 democracy ,/n./@民主;,/n./@民主主义;
 denigrate ,/vt./@詆毀;,/vt./@毀謗;,/vt./@貶低;,/vt./@玷辱;
+deodorant ,/adj./@除臭的;,/n./@除臭劑;
 departure ,/n./@离开;,/n./@出发;,/n./@违背;
 dependent ,/n./@依赖性的;
 depravity ,/n./@堕落;
@@ -370,6 +374,7 @@ entertain ,/v./使@娱乐;
 entourage ,/n./@随从;
 enumerate ,/v./@列舉;,/v./@枚舉;
 enunciate ,/v./@明確表達;
+eparchial ,/adj./@主教管區的;
 ephemeral ,/adj./@短暫的;,/adj./@朝生暮死的;
 epidermis ,/n./@表皮;,/n./@外皮;
 equipment ,/n./@裝備;,/n./@設備;,/n./@器材;,/n./@裝置;
@@ -512,6 +517,7 @@ impotence ,/n./@陽痿;,/n./@無能;,/n./@無效;,/n./@虛弱;,/n./@衰弱;
 improvise ,/v./@隨機應變;,/v./@即興創作;
 inability ,/n./@無能;
 incapable ,/adj./@不能的;,/adj./@不會的;
+incarnate ,/adj./@化身的;,/adj./@人體化的;,/adj./@具體化的;,/vt./@具體化;
 incentive ,/n./@刺激;,/adj./@刺激性的;
 incessant ,/adj./@持續不斷的;,/adj./@連續的;
 inclusion ,/n./@包含;
@@ -886,6 +892,7 @@ signature ,/n./@署名;
 similarly ,/adj./@相似的;
 simulator ,/n./@模拟器;
 sincerely ,/adj./@真诚地;
+sinistral ,/adj./@左的;,/adj./@用左手的;,/adj./@左旋的;
 situation ,/n./@情况;
 skeptical ,/adj./@懷疑的;,/adj./@懷疑論的;
 slaughter ,/n./@屠殺;
@@ -947,6 +954,7 @@ telephone ,/n./@电话;
 telephony ,/n./@電話通訊;,/n./@電話學;,/n./@電話製造法;
 telescope ,/n./@望远镜;
 temporary ,/adj./@临时的;
+tenebrous ,/adj./@陰暗的;,/adj./@黑暗的;
 tentative ,/adj./@試探性的;,/adj./@試驗性的;,/adj./@暫時性的;,/adj./@嘗試性的;
 terminate ,/vt./@终止;,/vt./@结束;,/vt./@停止;,/vt./@解雇;
 territory ,/n./@领地;
