--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -121,6 +121,7 @@ chromosome
 chronology
 circumcise
 circumvent
+clementine
 clumsiness
 collarbone
 collateral
@@ -276,7 +277,9 @@ equivocate
 escalation
 especially
 evaluation
+evangelism
 evangelist
+Evangelist
 eventually
 everything
 everywhere
@@ -377,6 +380,7 @@ inequality
 inevitable
 infarction
 infiltrate
+infinitive
 ingredient
 inhabitant
 inhibition
@@ -471,6 +475,7 @@ narcissist
 navigation
 neutralize
 nomination
+nominative
 nonchalant
 obligation
 obligatory
@@ -616,6 +621,7 @@ sedulously
 seismology
 separately
 separation
+Septuagint
 settlement
 shopkeeper
 similarity
