--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -10,6 +10,8 @@ adventitious
 agricultural
 alphabetical
 ambidextrous
+amphitheater
+amphitheatre
 annihilation
 announcement
 antediluvian
@@ -92,6 +94,7 @@ enthusiastic
 entreprenant
 entrepreneur
 estrangement
+evangelistic
 exaggeration
 exasperation
 excruciating
