--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -1116,6 +1116,7 @@ recipe
 recite
 recoil
 record
+rectum
 redact
 redeem
 reduce
@@ -1273,6 +1274,7 @@ shrink
 shroom
 shroud
 signal
+signet
 signor
 silage
 silent
@@ -1287,6 +1289,7 @@ sizzle
 sketch
 skewed
 skinny
+Slavic
 sledge
 sleepy
 sleeve
