--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -100,6 +100,7 @@ attempt
 attract
 auction
 augment
+aureate
 auspice
 austere
 autopsy
@@ -210,6 +211,7 @@ carrier
 cartoon
 cascade
 cashier
+Catalan
 catchup
 caution
 ceiling
@@ -250,6 +252,7 @@ clutter
 cockade
 cockney
 cockpit
+cognate
 collage
 collate
 collect
@@ -399,6 +402,7 @@ destiny
 destroy
 develop
 deviate
+dextral
 diagram
 dialect
 dialogo
@@ -487,6 +491,7 @@ entwine
 envelop
 envious
 environ
+eparchy
 epicure
 epigram
 episode
@@ -499,6 +504,7 @@ esquire
 eternal
 eudemon
 Eurasia
+evangel
 evasion
 evasive
 evident
