--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -124,6 +124,7 @@ bandange
 banister
 baseball
 basement
+basilica
 bathroom
 bedazzle
 behavior
@@ -208,10 +209,12 @@ coherent
 cohesion
 cohesive
 coincide
+coliseum
 collapse
 colonial
 colorful
 colossal
+colossus
 Columbia
 comedian
 commence
@@ -332,6 +335,7 @@ dilation
 diligent
 diminish
 dinosaur
+diocesan
 director
 disabled
 disagree
@@ -442,6 +446,7 @@ evidence
 excavate
 exchange
 exciting
+exemplar
 exercise
 exertion
 existent
@@ -467,6 +472,7 @@ favorite
 feasible
 February
 feedback
+feminine
 ferocity
 festival
 fidelity
@@ -506,6 +512,7 @@ fumigate
 function
 fuselage
 futility
+Galician
 garrison
 gauntlet
 generate
@@ -898,6 +905,7 @@ pressing
 pressure
 prestige
 previous
+prioress
 priority
 pristine
 probable
@@ -1038,6 +1046,7 @@ skeletal
 skeleton
 skillful
 skirmish
+Slavonic
 sluggish
 smoulder
 sobriety
