--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -145,6 +145,7 @@ caliphate
 candidacy
 canonical
 capillary
+capitulum
 Capricorn
 captivate
 careerist
@@ -154,6 +155,7 @@ carpentry
 cartilage
 cascading
 catalogue
+Catalonia
 catamaran
 catatonic
 celebrate
@@ -189,6 +191,7 @@ collation
 colleague
 collision
 collocate
+Colosseum
 commingle
 commissar
 committee
@@ -274,6 +277,7 @@ demanding
 demeanour
 democracy
 denigrate
+deodorant
 departure
 dependent
 depravity
@@ -370,6 +374,7 @@ entertain
 entourage
 enumerate
 enunciate
+eparchial
 ephemeral
 epidermis
 equipment
@@ -512,6 +517,7 @@ impotence
 improvise
 inability
 incapable
+incarnate
 incentive
 incessant
 inclusion
@@ -886,6 +892,7 @@ signature
 similarly
 simulator
 sincerely
+sinistral
 situation
 skeptical
 slaughter
@@ -947,6 +954,7 @@ telephone
 telephony
 telescope
 temporary
+tenebrous
 tentative
 terminate
 territory
