--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -558,7 +558,7 @@ loaf ,/n./@一條@面包;,/v./@遊蕩;
 loan ,/n./@貸款;
 lobe ,/n./@葉;,/n./@裂片;
 lock ,/n./@鎖;
-logo ,/n./@商標;
+logo ,/n./@商標;,/n./@標識;
 loin ,/n./@腰部;,/n./@下身;,/n./@腰肉;
 long ,/adj./@長@的;
 look ,/v.//vi.//vt./@看;
