--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -686,6 +686,7 @@ local ,/adj./@當地的;
 lodge ,/n./@旅館;,/n./@門房;,/v./@提出;,/v./@寄存;,/v./@寄宿;
 logic ,/n./@邏輯;
 login ,/v./@登錄;,/v./@注冊;,/n./@登錄;
+Logos ,/n./神的@話;,/n./神的@道;
 loose ,/adj./@松的;
 lousy ,/adj./@討厭的;,/adj./@污穢的;
 lover ,/n./@情人;
