--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -14,6 +14,7 @@ accordance ,/n./@符合;
 accumulate ,/n./@堆积;
 accurately ,/adj./@精确地;
 accusation ,/n./@控告;
+accusative ,/adj./@賓格的;,/n./@賓格;
 activation ,/n./@激活;
 additional ,/adj./@附加的;,/adj./@增加的;
 adjustment ,/n./@调整;
@@ -212,6 +213,7 @@ curriculum ,/n./@課程;
 deactivate ,/v./@停用;,/v./@遣散;
 decapitate ,/vt./@斬首;
 decelerate ,/v./@减速;
+declension ,/n./@詞形變化;
 definitely ,/adj./@明确的;
 definition ,/n./@定义;
 definitive ,/adj./@定义的;,/adj./@决定的;
@@ -486,6 +488,7 @@ occidental ,/adj./@西方的;,/adj./@西洋的;
 occupation ,/n./@職業;,/n./@佔有;
 occurrence ,/n./@发生;,/n./@出現;
 octahedron ,/n./@八面體;
+omniscient ,/adj./@全知的;
 opposition ,/n./@反对;
 optimistic ,/adj./@乐观的;
 ornamental ,/adj./@裝飾的;
