--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -664,6 +664,7 @@ neck ,/n./@脖子;
 need ,/v./@需要;
 neon ,/n./@氖;,/n./@霓虹燈;
 nerd ,/n./@呆子;
+ness ,/n./@岬;
 nest ,/n./@巢;,/n./@窩;,/v./@築@巢;,/v./@嵌套;
 neur ,/n./@神經;,/n./@神經細胞;
 news ,/n./@新聞;
