--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -793,6 +793,7 @@ odour ,/n./@氣味;
 offer ,/v./@提供;
 often ,/adv./@經常;
 olive ,/n./@橄欖;
+omni- ,/pref./@全;
 onion ,/n./@洋葱;,/n./@圆葱;
 onset ,/n./@開始;,/n./@着手;,/n./@發作;,/n./@攻擊;
 opine ,/v./@以爲;,/v./@想;,/v./@認爲;
