--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -495,6 +495,7 @@ equate ,/v./@等同;
 equine ,/adj./@马的;
 equity ,/n./@公平;
 eraser ,/n./@橡皮;,/n./@清除器;,/n./@擦除器;
+erbium ,/n./@鉺;
 erotic ,/adj./@色情的;,/adj./@性愛的;
 errand ,/n./@使命;,/n./差事;,/n./@差使;,/n./@任務;
 errant ,/adj./@不定的;
@@ -917,7 +918,7 @@ negate ,/vt./@否定;,/vt./@取消;
 nephew ,/n./@侄子;,/n./@外甥;
 nestle ,/v./@安頓;,/v./@建巢;
 neural ,/adj./@神經的;
-neuter ,/adj./@中性的;,/n./@無性;
+neuter ,/adj./@中性的;,/adj./@無性的;,/n./@中性詞;,/n./@無性者;,/n./@無性動物;
 nicety ,/n./@精密;
 nickel ,/n./@鎳幣;
 nimble ,/adj./@敏捷的;
