--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -584,6 +584,7 @@ freight ,/n./@貨運;,/n./@貨物;,/n./@運費;,/vt./@以货运运输;
 friable ,/adj./@易碎的;
 frigate ,/n./@護衛艦;,/n./@巡防艦;
 fucking ,/adv./@他媽的;
+fulcrum ,/n./@支點;,/n./@支柱;
 fulfill ,/v./@完成;
 funeral ,/n./@葬禮;
 funfair ,/n./@遊樂場;
