--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -572,6 +572,7 @@ horrible ,/adj./@可怕的;
 horrific ,/adj./@可怕的;
 hospital ,/n./@医院;
 humanism ,/n./@人道主義;
+humanist ,/n./@人文主義者;,/n./@人道主義者;,/adj./@人道主義的;,/adj./@人文主義的;
 humanity ,/n./@人類;,/n./@人性;
 humanoid ,/n./@類人動物;,/adj./@人形的;,/n./@類人的;
 humidity ,/n./@湿度;,/n./@潮湿;
