--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -14,6 +14,7 @@ accordance
 accumulate
 accurately
 accusation
+accusative
 activation
 additional
 adjustment
@@ -212,6 +213,7 @@ curriculum
 deactivate
 decapitate
 decelerate
+declension
 definitely
 definition
 definitive
@@ -486,6 +488,7 @@ occidental
 occupation
 occurrence
 octahedron
+omniscient
 opposition
 optimistic
 ornamental
