--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -107,6 +107,7 @@ hallucinogen ,/n./@迷幻劑;,/n./@致幻剂;
 heterosexual ,/adj./@異性的;,/adj./@異性戀的;
 hieroglyphic ,/n./@象形文字;,/adj./@象形文字的;
 housewarming ,/n./@乔迁庆宴;
+humanitarian ,/n./@人道主義者;,/adj./@人道主義的;
 hypothetical ,/adj./@假设的;,/adj./@假言的;
 illumination ,/n./@照明;,/n./@启发;
 illustration ,/n./@阐明;,/n./@图示;
