--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -42,6 +42,7 @@ counterattack ,/v./@反擊;,/v./@反攻;
 counterweight ,/n./@平衡;,/n./@平衡重;
 decomposition ,/n./@腐爛;,/n./@分解;
 demonstration ,/n./@示範;,/n./@展示;,/n./@示威;
+demonstrative ,/adj./@指示的;,/adj./@感情外露的;,/n./@指示詞;
 deterioration ,/n./@惡化;,/n./@退化;,/n./@墮落;
 determination ,/n./@决心;
 discretionary ,/adj./@任意的;,/adj./@自由决定的;
